| Summary: | ASTERISK-24529: Using AMI Action Bridge to on an already bridged channel causes the incorrect return priority to be used | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2014-11-17 09:20:03.000-0600 | Date Closed: | 2017-05-08 07:26:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Bridging |
| Versions: | SVN 12.7.0 13.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When using "Action: Bridge" on two channels in dialplan, after one channel hangs up, the other normally goes to the next priority in dialplan. For example use this method to bridge channel 1 and 2, then bridge channel 1 and 3. When channel 1 is removed from the first bridge, channel 2 will be sent to the next priority in dialplan. If channel 3 hangs up before channel 2, channel 2 will by sent to the same priority it originally came from. Found through testsuite: tests/bridge/bridge_action, channel 3 goes back to Echo() at the end of the test and never hangs up.
This is related to {{AST_FLAG_IN_AUTOLOOP}}. When the channel is in a dialplan app and "Action: Bridge" is run, it tells the bridge that the return priority should be current + 1. The flag is set while the channel is within {{__ast_pbx_run}}, but not when the channel is already in a bridge initiated by AMI. So when the channel is rebridged it does nothing causes dialplan to advance to the next priority. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-05-08 07:26:35.657-0500 Change 5582 merged by Jenkins2: rest_api: Fix ami_bridge tests. [https://gerrit.asterisk.org/5582|https://gerrit.asterisk.org/5582] By: Friendly Automation (friendly-automation) 2017-05-08 07:34:21.063-0500 Change 5568 merged by Joshua Colp: bridge: Fix returning to dialplan when executing Bridge() from AMI. [https://gerrit.asterisk.org/5568|https://gerrit.asterisk.org/5568] By: Friendly Automation (friendly-automation) 2017-05-08 07:34:26.631-0500 Change 5567 merged by Joshua Colp: bridge: Fix returning to dialplan when executing Bridge() from AMI. [https://gerrit.asterisk.org/5567|https://gerrit.asterisk.org/5567] By: Friendly Automation (friendly-automation) 2017-05-08 07:34:31.891-0500 Change 5569 merged by Joshua Colp: bridge: Fix returning to dialplan when executing Bridge() from AMI. [https://gerrit.asterisk.org/5569|https://gerrit.asterisk.org/5569] | ||